# cmake-linux-kernel

./: .gitignore  CMakeLists.txt  README.md
3party/: CMakeLists.txt
cmake/: CompileBusybox.cmake  CompileKernel.cmake  FindArm64Linux.cmake  FindX86_64Linux.cmake  PrintColor.cmake  Product_QSG2000M-G.cmake
package/busybox/config/: config
package/kernel/config/: config
script/: bootloader_QSG2000M-G.sh  rootfs_QSG2000M-G.sh  utils.sh
src/kernel/hello/: CMakeLists.txt  Kbuild  hello.c
